--- a/public/index.html
+++ b/public/index.html
@@ -3,32 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Threat Analyzer - Static</title>
-    <!-- Chart.js CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <!-- vis-network CDN -->
-    <script src="https://unpkg.com/vis-network@9.1.2/dist/vis-network.min.js"></script>
-    <style>
-      /* Minimal reset + app styles (extracted and simplified from React CSS) */
-      *{box-sizing:border-box;margin:0;padding:0}
-      body{font-family:Segoe UI, Tahoma, Geneva, Verdana, sans-serif;background:#f5f7fa;color:#333}
-      .app{display:flex;height:100vh}
-      .sidebar{width:260px;background:#0f1419;color:#fff;padding:20px;display:flex;flex-direction:column}
-      .brand{display:flex;align-items:center;gap:10px;margin-bottom:20px}
-      .brand h1{font-size:18px}
-      .nav{display:flex;flex-direction:column;gap:8px}
-      .nav button{background:none;border:none;color:rgba(255,255,255,0.9);padding:10px;text-align:left;border-radius:6px;cursor:pointer}
-      .nav button.active{background:rgba(0,212,255,0.08);color:#00d4ff}
-      .main{flex:1;padding:20px;overflow:auto}
-      .header h1{font-size:24px;margin-bottom:6px}
-      .metrics{display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:16px;margin:16px 0}
-      .card{background:#fff;padding:16px;border-radius:10px;box-shadow:0 2px 8px rgba(0,0,0,0.06)}
-      .charts{display:grid;grid-template-columns:1fr 1fr;gap:16px}
-      .table{width:100%;border-collapse:collapse}
-      .table th,.table td{padding:10px;border-bottom:1px solid #eee;text-align:left}
-      .network-container{height:520px;background:linear-gradient(135deg,#eef0f7,#f5f7fa);border-radius:12px}
-      @media(max-width:900px){.charts{grid-template-columns:1fr}.sidebar{display:none}}
-    </style>
+    <meta name="description" content="Threat Analyzer — dashboard for transaction monitoring, network analysis and risk profiling." />
+    <title>Threat Analyzer</title>
+    <!-- External libs -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
+    <script src="https://unpkg.com/vis-network@9.1.2/dist/vis-network.min.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="app">
@@ -132,241 +112,6 @@
       </main>
     </div>
 
-    <script>
-      // Simple view navigation
-      document.querySelectorAll('.nav button').forEach(btn=>{
-        btn.addEventListener('click',()=>{
-          document.querySelectorAll('.nav button').forEach(b=>b.classList.remove('active'));
-          btn.classList.add('active');
-          const view=btn.dataset.view;
-          document.querySelectorAll('.view').forEach(s=>s.style.display='none');
-          const el=document.getElementById(view);
-          if(el) el.style.display='block';
-        });
-      });
-
-      // Default fallback sample data (used only if CSV not available)
-      let txData = [
-        {id:'TXN-001',date:'2025-01-07 14:32',from_account:'ACC-2024-001',to_account:'ACC-2024-045',amount:50000,risk:85,status:'FLAGGED'},
-        {id:'TXN-002',date:'2025-01-07 13:15',from_account:'ACC-2024-015',to_account:'ACC-2024-052',amount:9500,risk:72,status:'FLAGGED'},
-        {id:'TXN-003',date:'2025-01-07 11:45',from_account:'ACC-2024-042',to_account:'SHELL-2024-008',amount:245000,risk:92,status:'BLOCKED'},
-        {id:'TXN-004',date:'2025-01-07 10:20',from_account:'ACC-2024-089',to_account:'ACC-2024-090',amount:15000,risk:45,status:'NORMAL'},
-        {id:'TXN-005',date:'2025-01-07 09:10',from_account:'ACC-2024-120',to_account:'ACC-2024-121',amount:125000,risk:88,status:'FLAGGED'}
-      ];
-
-      const tbody = document.querySelector('#txTable tbody');
-
-      function clearTable(){ tbody.innerHTML = ''; }
-      function populateTable(data){
-        clearTable();
-        data.forEach(t=>{
-          const tr=document.createElement('tr');
-          tr.innerHTML = `<td>${t.id||''}</td><td>${t.date||''}</td><td>${t.from_account||t.from||''}</td><td>${t.to_account||t.to||''}</td><td>$${(Number(t.amount)||0).toLocaleString()}</td><td>${t.risk||''}</td><td>${t.status||''}</td>`;
-          tbody.appendChild(tr);
-        });
-      }
-
-      // Chart placeholders (will be created once DOM and Chart.js are ready)
-      const lineCtx = document.getElementById('lineChart').getContext('2d');
-      const barCtx = document.getElementById('barChart').getContext('2d');
-
-      // Create empty charts; we'll populate them after data load
-      const lineChart = new Chart(lineCtx,{
-        type:'line',
-        data:{labels:[],datasets:[{label:'Volume',data:[],borderColor:'#00d4ff',backgroundColor:'rgba(0,212,255,0.08)',fill:true},{label:'Risk Score',data:[],borderColor:'#ff6b6b',backgroundColor:'rgba(255,107,107,0.06)',fill:true}]},
-        options:{responsive:true,plugins:{legend:{position:'top'}}}
-      });
-
-      const barChart = new Chart(barCtx,{type:'bar',data:{labels:['High','Medium','Low'],datasets:[{label:'Count',data:[0,0,0],backgroundColor:['#ff6b6b','#ffa500','#4ade80']}]},options:{responsive:true,plugins:{legend:{display:false}}}});
-
-      // CSV parse helper (simple but handles quoted fields)
-      function parseCSV(text){
-        const rows = [];
-        const lines = text.split(/\r?\n/).filter(l=>l.trim()!=='');
-        if(lines.length===0) return rows;
-        const headers = lines[0].split(/,(?=(?:[^"]*"[^"]*")*[^"]*$)/).map(h=>h.replace(/^"|"$/g, '').trim());
-        for(let i=1;i<lines.length;i++){
-          const cols = lines[i].split(/,(?=(?:[^"]*"[^"]*")*[^"]*$)/).map(c=>c.replace(/^"|"$/g, '').trim());
-          if(cols.length===0) continue;
-          const obj = {};
-          for(let j=0;j<headers.length;j++){ obj[headers[j]] = cols[j]===undefined? '': cols[j]; }
-          rows.push(obj);
-        }
-        return rows;
-      }
-
-      function aggregateForLineChart(data){
-        // aggregate amount by date and average risk
-        const byDate = {};
-        data.forEach(r=>{
-          const d = (r.date||'').split(' ')[0];
-          const amount = Number(r.amount||r.Amount||0);
-          const risk = Number(r.risk||r.Risk||0);
-          if(!byDate[d]) byDate[d] = {amount:0,riskSum:0,count:0};
-          byDate[d].amount += amount;
-          byDate[d].riskSum += risk;
-          byDate[d].count += 1;
-        });
-        const labels = Object.keys(byDate).sort();
-        const amounts = labels.map(d=>byDate[d].amount);
-        const avgRisk = labels.map(d=> Math.round(byDate[d].riskSum / Math.max(1, byDate[d].count)) );
-        return {labels,amounts,avgRisk};
-      }
-
-      function updateCharts(data){
-        const agg = aggregateForLineChart(data);
-        lineChart.data.labels = agg.labels;
-        lineChart.data.datasets[0].data = agg.amounts;
-        lineChart.data.datasets[1].data = agg.avgRisk;
-        lineChart.update();
-
-        // risk distribution by bucket
-        let high=0,med=0,low=0;
-        data.forEach(r=>{
-          const risk = Number(r.risk||r.Risk||0);
-          if(risk>=75) high++; else if(risk>=40) med++; else low++;
-        });
-        barChart.data.datasets[0].data = [high,med,low];
-        barChart.update();
-      }
-
-      // Try to load CSV from public/data/detailed_transaction_data.csv
-      fetch('./data/detailed_transaction_data.csv').then(resp=>{
-        if(!resp.ok) throw new Error('no csv');
-        return resp.text();
-      }).then(text=>{
-        const rows = parseCSV(text);
-        if(rows.length>0){
-          // map CSV headers to internal shape if needed
-          txData = rows.map(r=>({
-            id: r.id || r.ID || '',
-            date: r.date || r.Date || '',
-            from_account: r.from_account || r.From || r.from || '',
-            to_account: r.to_account || r.To || r.to || '',
-            amount: Number(r.amount || r.Amount || 0),
-            risk: Number(r.risk || r.Risk || 0),
-            status: r.status || r.Status || ''
-          }));
-        }
-        populateTable(txData);
-        updateCharts(txData);
-      }).catch(err=>{
-        // fallback to mock data
-        populateTable(txData);
-        updateCharts(txData);
-      });
-
-      // vis-network setup
-      const nodes = new vis.DataSet([
-        {id:'ACC-001',label:'ACC-001\n(Primary)',value:500000,group:'high'},
-        {id:'ACC-045',label:'ACC-045',value:200000,group:'medium'},
-        {id:'ACC-052',label:'ACC-052\n(Receiver)',value:150000,group:'medium'},
-        {id:'SHELL-008',label:'SHELL-008\n(Offshore)',value:300000,group:'high'},
-        {id:'SHELL-015',label:'SHELL-015',value:250000,group:'high'},
-        {id:'ACC-089',label:'ACC-089\n(Mule-1)',value:75000,group:'medium'},
-        {id:'ACC-090',label:'ACC-090\n(Mule-2)',value:85000,group:'medium'},
-        {id:'PERSON-X',label:'Person X\n(Beneficial Owner)',value:0,group:'high'},
-        {id:'PERSON-Y',label:'Person Y\n(Accomplice)',value:0,group:'high'},
-        {id:'INT-SG-001',label:'INT-SG-001\n(Singapore)',value:180000,group:'high'},
-        {id:'INT-HK-002',label:'INT-HK-002\n(Hong Kong)',value:220000,group:'high'}
-      ]);
-      const edges = new vis.DataSet([
-        {from:'PERSON-X',to:'ACC-001',label:'$500,000'},
-        {from:'ACC-001',to:'SHELL-008',label:'$245,000'},
-        {from:'ACC-001',to:'SHELL-015',label:'$200,000'},
-        {from:'SHELL-008',to:'ACC-089',label:'$75,000'},
-        {from:'SHELL-008',to:'ACC-090',label:'$85,000'},
-        {from:'SHELL-015',to:'ACC-052',label:'$150,000'},
-        {from:'ACC-089',to:'INT-SG-001',label:'$50,000'},
-        {from:'ACC-090',to:'INT-HK-002',label:'$60,000'},
-        {from:'ACC-052',to:'INT-SG-001',label:'$80,000'},
-        {from:'INT-SG-001',to:'ACC-045',label:'$120,000'},
-        {from:'INT-HK-002',to:'ACC-045',label:'$140,000'},
-        {from:'ACC-045',to:'PERSON-Y',label:'$200,000'}
-      ]);
-      const container = document.getElementById('networkViz');
-      const data = {nodes,edges};
-
-      // Create a clear, centered 'spider' layout by fixing positions in concentric rings
-      (function createSpiderLayout(){
-        const all = nodes.get();
-        if(all.length === 0) return;
-
-        // choose center node: node with max value (if present) otherwise first
-        let centerNode = all.reduce((a,b)=>((a.value||0) > (b.value||0) ? a : b), all[0]);
-        const centerId = centerNode.id;
-
-        // prepare other nodes
-        const others = all.filter(n=>n.id !== centerId);
-
-        // ring configuration (pixels). Adjust radii for clarity.
-        const rings = [160, 320, 480];
-
-        // distribute nodes into rings: fill first ring up to 8, second up to 16, rest into third
-        const ringBuckets = [[],[],[]];
-        others.forEach((n,i)=>{
-          if(i < 8) ringBuckets[0].push(n);
-          else if(i < 24) ringBuckets[1].push(n);
-          else ringBuckets[2].push(n);
-        });
-
-        // update center position at origin (vis uses coordinates in px)
-        nodes.update([{id:centerId,x:0,y:0,fixed:true}]);
-
-        // helper to place nodes evenly on a circle
-        function placeRing(bucket, radius){
-          const count = bucket.length;
-          for(let i=0;i<count;i++){
-            const angle = (2*Math.PI*i)/count;
-            const x = Math.round(radius * Math.cos(angle));
-            const y = Math.round(radius * Math.sin(angle));
-            nodes.update([{id: bucket[i].id, x, y, fixed: true}]);
-          }
-        }
-
-        placeRing(ringBuckets[0], rings[0]);
-        if(ringBuckets[1].length) placeRing(ringBuckets[1], rings[1]);
-        if(ringBuckets[2].length) placeRing(ringBuckets[2], rings[2]);
-      })();
-
-      const options = {
-        nodes: {
-          shape: 'dot',
-          scaling: {min:12, max:48},
-          font: {size:14}
-        },
-        edges: {
-          smooth: {enabled: true, type: 'curvedCW', roundness: 0.2},
-          color: {inherit:true}
-        },
-        physics: {enabled: false},
-        interaction: {hover: true, navigationButtons: true, keyboard: true, zoomView: true, dragView: true}
-      };
-
-      const network = new vis.Network(container, data, options);
-      // ensure full view of the spider
-      network.fit({animation:{duration:500}});
-
-      // Allow scrolling (mouse wheel) to pan the spider network vertically/horizontally.
-      // If user holds Ctrl while scrolling, allow default zoom behavior instead.
-      container.addEventListener('wheel', function(e){
-        // prevent page scroll when interacting with the network
-        if (e.ctrlKey) {
-          // allow browser/vis-network to handle ctrl+wheel (zoom)
-          return;
-        }
-        e.preventDefault();
-        // Small factor to make scrolling comfortable — adjust if needed
-        const factor = 1;
-        // Use moveTo with offset to pan view by wheel delta (in pixels)
-        // Reverse sign so wheel-down moves content up (natural scrolling feel)
-        try {
-          network.moveTo({offset: {x: -e.deltaX * factor, y: -e.deltaY * factor}});
-        } catch (err) {
-          // fallback: do nothing if moveTo fails
-          console.warn('Wheel pan failed', err);
-        }
-      }, {passive: false});
-    </script>
+    <script src="app.js" defer></script>
   </body>
 </html>
