--- a/frontend/index.html
+++ b/frontend/index.html
@@ -84,7 +84,15 @@
         <section id="network" class="view" style="display:none">
           <div class="header"><h1>Network Analysis & Money Trail</h1><p>Interactive spider map showing transaction layers</p></div>
           <div class="network-container card" style="margin-top:12px;padding:12px">
-            <div id="networkViz" style="width:100%;height:500px"></div>
+            <div style="display:flex;gap:12px;align-items:flex-start">
+              <div id="networkViz" style="flex:1;min-width:200px;height:500px"></div>
+              <div id="nodeDetails" style="width:320px;max-width:40%;">
+                <div class="card">
+                  <h3>Account Details</h3>
+                  <div id="nodeDetailsContent" style="font-size:14px;color:#222;padding:6px">Click a node to see details</div>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
 
