--- a/frontend/index.html
+++ b/frontend/index.html
@@ -113,7 +113,8 @@
           <div class="card" style="margin-top:12px">
             <h3>Detected Patterns</h3>
             <table class="table">
-              <thead><tr><th>ID</th><th>Name</th><th>Severity</th><th>Confidence</th></tr></thead>
+              <thead><tr><th>ID</th><th>Name</th><th>Severity</th><th>Confidence</th><th>Actions</th></tr></thead>
+              <!-- Added Actions column for pattern interactions -->
               <tbody id="patternsBody">
               </tbody>
             </table>
