--- a/frontend/index.html
+++ b/frontend/index.html
@@ -86,6 +86,20 @@
           <div class="network-container card" style="margin-top:12px;padding:12px">
             <div style="display:flex;gap:12px;align-items:flex-start">
               <div id="networkViz" style="flex:1;min-width:200px;height:500px"></div>
+              <div style="display:flex;flex-direction:column;gap:8px;align-items:flex-start">
+                <div style="background:#fff;padding:8px;border-radius:6px;box-shadow:0 1px 6px rgba(0,0,0,0.06);font-size:13px">
+                  <strong>Legend</strong>
+                  <div style="margin-top:6px">→ Arrow: transaction direction</div>
+                  <div style="display:flex;gap:8px;align-items:center"><span style="display:inline-block;width:12px;height:12px;background:#9aa0a6;border-radius:3px"></span><span>Small amount</span></div>
+                  <div style="display:flex;gap:8px;align-items:center"><span style="display:inline-block;width:12px;height:12px;background:#ffa500;border-radius:3px"></span><span>Medium amount</span></div>
+                  <div style="display:flex;gap:8px;align-items:center"><span style="display:inline-block;width:12px;height:12px;background:#ff6b6b;border-radius:3px"></span><span>Large amount</span></div>
+                  <div>• IP shown on edge label / tooltip</div>
+                </div>
+                <div style="background:#fff;padding:8px;border-radius:6px;box-shadow:0 1px 6px rgba(0,0,0,0.06);font-size:13px">
+                  <label style="display:flex;align-items:center;gap:8px"><input type="checkbox" id="togglePulse" checked> Pulse sink nodes on select</label>
+                  <label style="display:flex;align-items:center;gap:8px;margin-top:6px"><input type="checkbox" id="toggleFlow" checked> Animate flow particles</label>
+                </div>
+              </div>
               <div id="nodeDetails" style="width:320px;max-width:40%;">
                 <div class="card">
                   <h3>Account Details</h3>
