Final Risk Profiling Update

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -127,6 +127,7 @@
                 <option value="24">24 / page</option>
                 <option value="48">48 / page</option>
               </select>
+              <button id="exportRiskBtn" style="padding:8px 10px;border-radius:8px;border:1px solid #e6e9ee;background:var(--accent);color:#032;cursor:pointer">Export CSV</button>
             </div>
             <div id="riskProfiles" style="display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:12px;margin-top:12px">
               <!-- Risk profile cards injected here -->
