--- a/public/index.html
+++ b/public/index.html
@@ -54,9 +54,42 @@
             <table class="table">
               <thead><tr><th>Account</th><th>Message</th><th>Amount</th><th>Severity</th></tr></thead>
               <tbody>
-                <tr><td>ACC-2024-001</td><td>Rapid fund transfer across jurisdictions</td><td>$125,000</td><td style="color:#ff6b6b">HIGH</td></tr>
-                <tr><td>ACC-2024-015</td><td>Multiple small transactions</td><td>$89,500</td><td style="color:#ffa500">MED</td></tr>
-                <tr><td>ACC-2024-042</td><td>Shell company payment detected</td><td>$245,000</td><td style="color:#ff6b6b">HIGH</td></tr>
+                <tr>
+                  <td>ACC1249</td>
+                  <td>Outbound transfer to offshore beneficiary <strong>SHELL-015</strong> — layering suspected</td>
+                  <td>$250,000</td>
+                  <td style="color:#ff6b6b">HIGH</td>
+                </tr>
+                <tr>
+                  <td>ACC1918</td>
+                  <td>Large inbound transfer from high-risk origin (unusual counterpart)</td>
+                  <td>$320,000</td>
+                  <td style="color:#ff6b6b">HIGH</td>
+                </tr>
+                <tr>
+                  <td>ACC1107</td>
+                  <td>Multiple structured deposits below reporting threshold — potential smurfing</td>
+                  <td>$120,500</td>
+                  <td style="color:#ff6b6b">HIGH</td>
+                </tr>
+                <tr>
+                  <td>ACC1839</td>
+                  <td>Rapid cross-border transfers to several offshore nodes</td>
+                  <td>$180,000</td>
+                  <td style="color:#ff6b6b">HIGH</td>
+                </tr>
+                <tr>
+                  <td>ACC1663</td>
+                  <td>Suspicious round-trip activity detected with <strong>ACC1524</strong></td>
+                  <td>$75,500</td>
+                  <td style="color:#ff6b6b">HIGH</td>
+                </tr>
+                <tr>
+                  <td>ACC1524</td>
+                  <td>Payment to known shell company <strong>SHELL-008</strong> flagged for review</td>
+                  <td>$245,000</td>
+                  <td style="color:#ff6b6b">HIGH</td>
+                </tr>
               </tbody>
             </table>
           </div>
